Massive changes to HTML and CSS to fix layout issues on multiple pages. This should also fix the page issue I was having in Github.

--- a/CSS/homepage.css
+++ b/CSS/homepage.css
@@ -24,9 +24,9 @@
     width: 436px;
     height: 457px;
 }
-section {
+.home-section {
     display: flex;
-    height: 1000px;
+    height: 450px;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
