--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,17 +3,18 @@ body {
     background: linear-gradient(180deg, #4B4A37 10.42%, rgba(121, 120, 105, 0.81) 60.94%, rgba(171, 176, 162, 0) 100%);    
 }
 
-.inline_block {
-    width: 100%;
+.navbar {
     display:flex;
     flex-direction: row;
     width: 100%;
-    
+    justify-content: center;
 }
 
 .navigation {
-    width: 73%;
-    margin-left: auto;
+    width: 75%;
+    margin: auto;
+    margin-bottom: 100px;
+    margin-top:30px
 }
 
 .inline{
@@ -35,12 +36,9 @@ body {
 .footer {
     font-size: 32px;
     text-align: center;
-    position: fixed;
-    left:0;
+    position: static;
     bottom: 0;
     width: 100%;
-
-
 }
 .socialFooter {
     display: flex;
@@ -50,3 +48,11 @@ body {
     margin: auto;
 
 }
+#page-container {
+    position: relative;
+    min-height: 100vh;
+  }
+  
+  #content-wrap {
+    padding-bottom: 2.5rem;    /* Footer height */
+  }
